<resources>

    <string name="app_name">Contact Manager</string>
    <string name="contact_name">Contact Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="email_address">Email</string>
    <string name="postal_address">Address</string>
    <string name="add_button">Add Contact</string>
    <string name="contact">Contact</string>
    <string name="help">Help</string>
    <string name="action_settings">Settings</string>

    <string name="contactName">Contact Name</string>
    <string name="contactNumber">Phone</string>
    <string name="contactEmail">Email</string>
    <string name="contactAddress">Address</string>

</resources>
